--- a/Modulo-1/Bloco-03/4: HTML Semântico/index.html
+++ b/Modulo-1/Bloco-03/4: HTML Semântico/index.html
@@ -6,6 +6,21 @@
     <title>Soco a 80km/h: Conheça o Stomatopoda</title>
   </head>
   <body>
-    <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+    <header>
+      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="/" target="_blank" rel="noopener noreferrer">Página Inicial</a>
+          </li>
+          <li>
+            <a href="/" target="_blank" rel="noopener noreferrer">Sobre</a>
+          </li>
+          <li>
+            <a href="/" target="_blank" rel="noopener noreferrer">Contato</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
