--- a/Modulo-1/Bloco-03/4: HTML Semântico/index.html
+++ b/Modulo-1/Bloco-03/4: HTML Semântico/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      <h3>Soco a 80km/h: Conheça o Stomatopoda</h3>
       <nav>
         <ul>
           <li>
@@ -22,5 +22,39 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section>
+        <article>
+          <h3>Fatos sobre o Stomatopoda</h3>
+          <section>
+            <h4>Conheça a lacraia-do-mar</h4>
+            <p><em>Odontodactylus scyllarus</em>, Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+
+            <table>
+              <tr>
+                <th>Reino</th>
+                <th>Filo</th>
+                <th>Subfilo</th>
+                <th>Classe</th>
+                <th>Subclasse</th>
+                <th>Ordem</th>
+              </tr>
+              <tr>
+                <td>Animalia</td>
+                <td>Arthtopoda</td>
+                <td>Crustacea</td>
+                <td>Malacostraca</td>
+                <td>Hoplocarida</td>
+                <td>Stomatopoda</td>
+              </tr>
+            </table>
+
+            <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores.</p>
+          </section>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nesciunt laudantium sed sunt. Vel provident hic dolorem? Itaque, consectetur illo. Quam quibusdam vero hic natus quisquam aut. Perspiciatis, illum error. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi facere error nostrum repudiandae? Quae numquam maiores cum neque laborum sit nihil alias reprehenderit, ea facere tempore, laboriosam, odit dolorum consequuntur?</p>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
