--- a/Modulo-1/Bloco-03/3: HTML & CSS - Seletores e posicionamento/Combinações e Classes Descendentes/index.html
+++ b/Modulo-1/Bloco-03/3: HTML & CSS - Seletores e posicionamento/Combinações e Classes Descendentes/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1><em>Combinações e Classes Descendentes</em></h1>
-    <br />
+    <br /> 
     <h3>Top 5 frases memoráveis:</h3>
     <ol>
       <li><em>Com grandes poderes vêm grandes responsabilidades.</em> - Tio Ben (Homem Aranha)</li>
@@ -17,7 +17,7 @@
       <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
     <h3>As maiores linguagens de programação:</h3>
-    <ul>
+    <ul id="programacao">
       <li>Python</li>
       <li>Java</li>
       <li>JavaScript</li>
