--- a/Modulo-1/Bloco-03/2: Estruturas da página/index.html
+++ b/Modulo-1/Bloco-03/2: Estruturas da página/index.html
@@ -2,18 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>HTML</title>
-    <style>
-      h1 {
-        font-family: sans-serif;
-      }
-      p {
-        font-weight: 600;
-      }
-      body {
-        font-size: 16px;
-      }
-    </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
