--- a/Modulo-1/Bloco-03/4: HTML Semântico/Exercícios/index.html
+++ b/Modulo-1/Bloco-03/4: HTML Semântico/Exercícios/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -9,17 +9,17 @@
   <body>
 
     <header class="Header">
-      <h2>Soco a 80km/h: Conheça o Stomatopoda</h2>
+      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
       <nav>
         <ul>
           <li>
-            <a href="/" target="_blank" rel="noopener noreferrer">Página Inicial</a>
+            <a href="/" rel="noopener noreferrer">Página Inicial</a>
           </li>
           <li>
-            <a href="/" target="_blank" rel="noopener noreferrer">Sobre</a>
+            <a href="/" rel="noopener noreferrer">Sobre</a>
           </li>
           <li>
-            <a href="/" target="_blank" rel="noopener noreferrer">Contato</a>
+            <a href="/" rel="noopener noreferrer">Contato</a>
           </li>
         </ul>
       </nav>
@@ -34,12 +34,13 @@
           </aside>
         </section>
         <article>
-          <h3>Fatos sobre o Stomatopoda</h3>
+          <h2>Fatos sobre o Stomatopoda</h2>
           <section class="divideAside">
-            <h4>Conheça a lacraia-do-mar</h4>
+            <h3>Conheça a lacraia-do-mar</h3>
             <p><em>Odontodactylus scyllarus</em>, Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
 
             <table class="tabela">
+              <caption>Tabela dos reinos</caption>
               <tr>
                 <th>Reino</th>
                 <th>Filo</th>
@@ -58,10 +59,10 @@
               </tr>
             </table>
             <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores.</p>
-            <img id="primeiraImg" src="./images.jpg" alt="">
+            <img id="primeiraImg" src="./images.jpg" alt="Imagem do Stomatopoda">
           </section>
           <section>
-            <h4>Visão</h4>
+            <h3>Visão</h3>
             <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina</p>
             <p>Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão dos estomatópodes possui <strong> doze cones sensíveis à luz</strong> e outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores polarizadas e <em>imagens multiespectrais</em>.</p>
             <p>Como cada cone pode ver cerca de 100 cores, os estomatópodes são capazes de ver 10² cores, ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou seja, 1 milhão de cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
@@ -69,13 +70,13 @@
         <section class="alinhadoComImg">
           <h4>Mais um pouco sobre eles</h4>
           <p>São animais que apresentam comportamentos sociais muito variados, desde ameaças visuais contra predadores até comportamentos de côrte. De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat.</p>
-          <img src="./olhos.jpeg" alt="">
+          <img src="./olhos.jpeg" alt="Imagem focando nos olhos do Stomatopoda">
         </section>
         <section>
           <h4>Referênicas</h4>
           <ul>
-            <li><a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank" rel="noopener noreferrer">The OatMeal</a></li>
-            <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank" rel="noopener noreferrer">Wikipedia</a></li>
+            <li><a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank" rel="noopener noreferrer">The OatMeal (opens new window)</a></li>
+            <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank" rel="noopener noreferrer">Wikipedia (opens new window)</a></li>
           </ul>
         </section>
         </article>
