--- a/Modulo-1/Bloco-05/2: Trabalhando com elementos/index.html
+++ b/Modulo-1/Bloco-05/2: Trabalhando com elementos/index.html
@@ -81,6 +81,9 @@
 
       // Desafio 5
       main.appendChild(criaElemento('section', 'left-content'))
+
+      // Desafio 6
+      main.appendChild(criaElemento('section', 'right-content'))
     </script>
   </body>
 </html>
